<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/backgroung"  >

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llTitles"
            android:layout_marginTop="@dimen/marginStat"
            android:layout_marginLeft="@dimen/paddinfStat">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat"
                android:id="@+id/textView16" android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recomended"
                android:id="@+id/textView17" android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current"
                android:id="@+id/textView18" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llProt"
            android:layout_below="@+id/llTitles"
            android:layout_marginTop="@dimen/marginStat"
            android:layout_marginLeft="@dimen/paddinfStat">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein"
                android:id="@+id/textView19" android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvStatProtRecom" android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvStatProt" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llFat"
            android:layout_below="@id/llProt"
            android:layout_marginTop="@dimen/marginStat"
            android:layout_marginLeft="@dimen/paddinfStat">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fat"
                  android:id="@+id/textView22" android:layout_weight="1"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="New Text"
                  android:id="@+id/tvStatFarRecom" android:layout_weight="1"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="New Text"
                  android:id="@+id/tvStatFat" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llCarbo"
            android:layout_below="@+id/llFat"
            android:layout_marginTop="@dimen/marginStat"
            android:layout_marginLeft="@dimen/paddinfStat">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/carbohydrates"
                  android:id="@+id/textView24" android:layout_weight="1"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="New Text"
                  android:id="@+id/tvStatCarboRecom" android:layout_weight="1"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="New Text"
                  android:id="@+id/tvStatCarbo" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llCalor"
            android:layout_below="@+id/llCarbo"
            android:layout_marginTop="@dimen/marginStat"
            android:layout_marginLeft="@dimen/paddinfStat">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/calorifical"
                  android:id="@+id/textView26" android:layout_weight="1"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="New Text"
                  android:id="@+id/tvStatCalorRecom" android:layout_weight="1"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="New Text"
                  android:id="@+id/tvStatCalor" android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>