<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvNameOfFood"
                android:textAlignment="center"
                />
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/protein"
                        android:id="@+id/textView12"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/zero"
                        android:text="New Text"
                        android:id="@+id/tvProtein"
                        android:layout_weight="1"
                        android:padding="@dimen/paddingFood"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fat"
                        android:id="@+id/textView13"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/zero"
                        android:text="New Text"
                        android:id="@+id/tvFat"
                        android:layout_weight="1"
                        android:padding="@dimen/paddingFood"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carbohydrates"
                        android:id="@+id/textView14"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/zero"
                        android:text="New Text"
                        android:id="@+id/tvCarbohydrates"
                        android:layout_weight="1"
                        android:padding="@dimen/paddingFood"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calorifical"
                        android:id="@+id/textView15"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/zero"
                        android:text="New Text"
                        android:id="@+id/tvCalorific"
                        android:layout_weight="1"
                        android:padding="@dimen/paddingFood"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>